# COMP-5130

./: README.md  pyproject.toml
k-means-project/: pyproject.toml
k-means-project/k_means/: k_means.py
project/: README.md  k_means.py  pyproject.toml
project/datasets/: README.md  test_data.txt
project/project/: main.py
project/project/algorithms/: __init__.py  k_means.py  random.py
