[tool.poetry]
name = "COMP5130 K-Means Project"
version = "0.1.0"
description = ""
authors = ["jmurrah <jacobhmurrah@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9.1, <3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scipy="<1.13"
networkx="<3.0"
node2vec = "^0.4.6"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"