[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["jmurrah <jacobhmurrah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1, <3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scipy="<1.13"
node2vec = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "project.main:main"
